@@ -4,13 +4,11 @@ package MyFileSourceHandler;
 
 use strict;
 use warnings;
-use vars qw( @ISA $LAST_OBJ $CAN_HANDLE $MAKE_ITER $LAST_SOURCE );
+use vars qw( $LAST_OBJ $CAN_HANDLE $MAKE_ITER $LAST_SOURCE );
 
-use MyCustom;
 use TAP::Parser::IteratorFactory;
-use TAP::Parser::SourceHandler::File;
 
-@ISA         = qw( TAP::Parser::SourceHandler::File MyCustom );
+use parent qw( TAP::Parser::SourceHandler::File MyCustom );
 $LAST_OBJ    = undef;
 $CAN_HANDLE  = undef;
 $MAKE_ITER   = undef;
