@@ -4,12 +4,8 @@ package MyGrammar;
 
 use strict;
 use warnings;
-use vars '@ISA';
 
-use MyCustom;
-use TAP::Parser::Grammar;
-
-@ISA = qw( TAP::Parser::Grammar MyCustom );
+use parent qw( TAP::Parser::Grammar MyCustom );
 
 sub _initialize {
     my $self = shift;
