@@ -4,12 +4,8 @@ package MyIterator;
 
 use strict;
 use warnings;
-use vars '@ISA';
 
-use MyCustom;
-use TAP::Parser::Iterator;
-
-@ISA = qw( TAP::Parser::Iterator MyCustom );
+use parent qw( TAP::Parser::Iterator MyCustom );
 
 sub _initialize {
     my $self = shift;
