@@ -4,15 +4,13 @@ package MySourceHandler;
 
 use strict;
 use warnings;
-use vars '@ISA';
 
-use MyCustom;
 use MyIterator;
 use TAP::Parser::SourceHandler;
 use TAP::Parser::IteratorFactory;
 
-#@ISA = qw( TAP::Parser::SourceHandler MyCustom );
-@ISA = qw( MyCustom );
+#use parent qw( TAP::Parser::SourceHandler MyCustom );
+use parent qw( MyCustom );
 
 TAP::Parser::IteratorFactory->register_handler(__PACKAGE__);
 
