@@ -4,17 +4,13 @@ package TAP::Parser::SubclassTest;
 
 use strict;
 use warnings;
-use vars qw(@ISA);
 
-use TAP::Parser;
-
-use MyCustom;
 use MySourceHandler;
 use MyPerlSourceHandler;
 use MyGrammar;
 use MyResultFactory;
 
-@ISA = qw( TAP::Parser MyCustom );
+use parent qw( TAP::Parser MyCustom );
 
 sub _default_source_class         {'MySourceHandler'}        # deprecated
 sub _default_perl_source_class    {'MyPerlSourceHandler'}    # deprecated
