@@ -2,7 +2,8 @@ Revision history for Test-Harness
         - Get rid of use vars in favor of our (Leon Timmermans)
         - Added use warnings to all modules (Leon Timmermans) and tests (Karen
           Etheridge)
-        - Use parent instead of @ISA (Leon Timmermans)
+        - Use parent instead of @ISA in all modules (Leon Timmermans) and
+          tests (Karen Etheridge)
 
 3.28    2013-05-02
         - Bugfix: Fix taint failures on Windows (Jan Dubois)
